--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
  
     <header id="header">
         <div id="logo">
-             <a href="interact.html"><img src="img/breadin_logo.png" alt="Hier kommst du zur Hauptseite" width="15%" height="15%"></a>
+             <a href="index.html"><img src="img/breadin_logo.png" alt="Hier kommst du zur Hauptseite" width="15%" height="15%"></a>
         </div>
         <nav id="head-center">
             <ul>
