--- a/project4.html
+++ b/project4.html
@@ -73,7 +73,7 @@
 <body>
     <header id="header">
         <div id="logo">
-            <a href="interact.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
+            <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
           </a>
         </div>
         <nav id="head-center">
