--- a/works.html
+++ b/works.html
@@ -54,6 +54,12 @@
     </div>
   </section>
 
+  <section class="project-section" style="background-image: url('img/intro_collection.png');" onclick="location.href='vlog_intro.html'">
+    <div class="overlay">
+      <h1>Vlog Intro Collection</h1>
+      <p>Motion graphic & typography experiments</p>
+    </div>
+  </section>
 
 
   <!-- 더 많은 섹션 추가 가능 -->
