--- a/project1.html
+++ b/project1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project One – you kim</title>
+  <title>Divergital</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
 
