--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
     }
 
   </style>
+  <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
  
