--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
   <title>CV — you kim</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="stylesheet" href="cv.css">
+  <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
  
