--- a/works.html
+++ b/works.html
@@ -5,6 +5,7 @@
   <title>Works</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="works.css" />
+  <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <header id="header">
