--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=UTF-8 />
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
   </head>
 
   <header id="header">
