--- a/project3.html
+++ b/project3.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>regenerative life</title>
   <link rel="stylesheet" href="styles.css" />
+  <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
   <style>
 
     .project-detail {
