--- a/project4.html
+++ b/project4.html
@@ -69,6 +69,8 @@
 
 
   </style>
+
+<script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
     <header id="header">
