--- a/project4.html
+++ b/project4.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>website</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
@@ -66,7 +67,52 @@
   border: 0;
   border-radius: 6px;
 }
+/* 기본 PC용 스타일 */
 
+/* 모바일 화면용 스타일 (최대 768px) */
+@media (max-width: 768px) {
+  /* 예: 메뉴 작게, 글자 줄이기, 레이아웃 쌓기 */
+  ul {
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 10px;
+  }
+
+  .menu a {
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+
+  img {
+    margin-left: 10px;
+    margin-top: 10px;
+    max-width: 90%;
+  }
+
+  .project-section {
+    height: 70vh;
+    background-position: center;
+  }
+
+  .overlay h1 {
+    font-size: 24px;
+  }
+
+  .overlay p {
+    font-size: 14px;
+  }
+
+  .project-detail {
+    padding: 20px 10px;
+  }
+
+  .back {
+    position: static;
+    display: block;
+    margin: 20px 0;
+    text-align: left;
+  }
+}
 
   </style>
 
