--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
   </head>
-
   <header id="header">
     <div id="logo">
-         <a href="index.html"><img src="img/breadin_logo.png" alt="Hier kommst du zur Hauptseite" width="15%" height="15%"></a>
+      <a href="index.html">
+        <img src="img/breadin_logo.png" class="site-logo">
+      </a>
     </div>
 
     <div class="menu-toggle" id="mobile-menu">&#9776;</div>
