--- a/works.html
+++ b/works.html
@@ -49,6 +49,13 @@
     </div>
   </section>
 
+  <section class="project-section" style="background-image: url('img/itd_2.jpg');" onclick="location.href='itd.html'">
+    <div class="overlay">
+      <h1>Into the dream</h1>
+      <p>Installation</p>
+    </div>
+  </section>
+
   <section class="project-section" style="background-image: url('img/web_1.png');" onclick="location.href='project4.html'">
     <div class="overlay">
       <h1>Personal website</h1>
