--- a/works.html
+++ b/works.html
@@ -26,6 +26,9 @@
   <!-- 각 프로젝트를 풀스크린 섹션으로 -->
   <a href="project1.html" class="project-link">
     <section class="project-section" style="background-image: url('img/divergital_thumbnail.png');">
+      <div class="mobile-image">
+        <img src="img/divergital_thumbnail.png" alt="Project image">
+      </div>
       <div class="overlay">
         <h1>Divergital</h1>
         <p>experimental AI music video</p>
