--- a/project1.html
+++ b/project1.html
@@ -5,120 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Divergital</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="project.css" />
   <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
-  <style>
-
-    .project-detail {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
-
-    .project-detail h1 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-
-    .project-detail p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 30px;
-    }
-
-    .project-detail img,
-    .project-detail .vimeo-wrapper {
-     width: 100%;
-    border-radius: 6px;
-    margin: 0 auto 30px;
-    margin-bottom: 30px;
-    vertical-align: top;
-    }
-
-    .back {
-        position: fixed;
-      display: inline-block;
-      margin-left: 50px;
-      margin-top: 60px;
-      font-size: 15px;
-      color: black;
-      text-decoration: none;
-      border: 1px solid black;
-      padding: 6px 12px;
-      border-radius: 4px;
-      transition: 0.2s;
-    }
-
-    .back:hover {
-      background: black;
-      color: white;
-
-    }
-
-    .vimeo-wrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  border-radius: 6px;
-  margin-bottom: 30px;
-}
-.vimeo-wrapper iframe {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  border-radius: 6px;
-}
-
-/* 기본 PC용 스타일 */
-
-/* 모바일 화면용 스타일 (최대 768px) */
-@media (max-width: 768px) {
-  /* 예: 메뉴 작게, 글자 줄이기, 레이아웃 쌓기 */
-  ul {
-    flex-direction: column;
-    align-items: flex-end;
-    margin-top: 10px;
-  }
-
-  .menu a {
-    padding: 6px 10px;
-    font-size: 14px;
-  }
-
-  img {
-    margin-left: 10px;
-    margin-top: 10px;
-    max-width: 90%;
-  }
-
-  .project-section {
-    height: 70vh;
-    background-position: center;
-  }
-
-  .overlay h1 {
-    font-size: 24px;
-  }
-
-  .overlay p {
-    font-size: 14px;
-  }
-
-  .project-detail {
-    padding: 20px 10px;
-  }
-
-  .back {
-    position: static;
-    display: block;
-    margin: 20px 0;
-    text-align: left;
-  }
-}
-
-  </style>
 </head>
 <body>
     <header id="header">
