--- a/works.html
+++ b/works.html
@@ -38,6 +38,9 @@
 
   <a href="project2.html" class="project-link">
   <section class="project-section" style="background-image: url('img/noise_2.png');" >
+    <div class="mobile-image">
+      <img src="img/noise_2.png" alt="Project image">
+    </div>
     <div class="overlay">
       <h1>Rhythm Perception</h1>
       <p>Data based audiovisual Installation</p>
@@ -46,6 +49,9 @@
 </a>
 
   <section class="project-section" style="background-image: url('img/re_life_1.png');" onclick="location.href='project3.html'">
+    <div class="mobile-image">
+      <img src="img/re_life_1.png" alt="Project image">
+    </div>
     <div class="overlay">
       <h1>(re)generative life</h1>
       <p>Data based AI visualization</p>
@@ -53,6 +59,9 @@
   </section>
 
   <section class="project-section" style="background-image: url('img/itd_2.jpg');" onclick="location.href='itd.html'">
+    <div class="mobile-image">
+      <img src="img/itd_2.jpg" alt="Project image">
+    </div>
     <div class="overlay">
       <h1>Into the dream</h1>
       <p>Installation</p>
@@ -60,6 +69,9 @@
   </section>
 
   <section class="project-section" style="background-image: url('img/web_1.png');" onclick="location.href='project4.html'">
+    <div class="mobile-image">
+      <img src="img/web_1.png" alt="Project image">
+    </div>
     <div class="overlay">
       <h1>Personal website</h1>
       <p>Custom-built portfolio site</p>
@@ -67,6 +79,9 @@
   </section>
 
   <section class="project-section" style="background-image: url('img/intro_collection.png');" onclick="location.href='vlog_intro.html'">
+    <div class="mobile-image">
+      <img src="img/intro_collection.png" alt="Project image">
+    </div>
     <div class="overlay">
       <h1>Vlog Intro Collection</h1>
       <p>Motion graphic & typography experiments</p>
