--- a/project2.html
+++ b/project2.html
@@ -14,6 +14,7 @@
             <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
           </a>
         </div>
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <nav id="head-center">
           <ul>
             <li class="menu"><a href="works.html"><span>/works/</span></a></li>
@@ -22,8 +23,15 @@
           </ul>
         </nav>
       </header>
-
-
+      <body>
+      <script>
+        const toggle = document.getElementById("mobile-menu");
+        const nav = document.getElementById("head-center");
+          
+        toggle.addEventListener("click", () => {
+          nav.classList.toggle("active");
+        });
+      </script>
   <!-- 뒤로 가기 -->
   <a class="back" href="works.html">&lt; back</a>
 
