--- a/project4.html
+++ b/project4.html
@@ -9,12 +9,12 @@
 
 <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
-<body>
     <header id="header">
         <div id="logo">
             <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
           </a>
         </div>
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <nav id="head-center">
           <ul>
             <li class="menu"><a href="works.html"><span>/works/</span></a></li>
@@ -23,6 +23,7 @@
           </ul>
         </nav>
       </header>
+      <body>
   <!-- 뒤로 가기 -->
   <a class="back" href="works.html">&lt; back</a>
 
