--- a/itd.html
+++ b/itd.html
@@ -11,11 +11,11 @@
     
     <header id="header">
         <div id="logo">
-            <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
+            <a href="index.html"><img src="img/breadin_logo.png" class="site-logo">
           </a>
         </div>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
-        
+
         <nav id="head-center">
           <ul>
             <li class="menu"><a href="works.html"><span>/works/</span></a></li>
