--- a/project3.html
+++ b/project3.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <div id="logo">
-            <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
+            <a href="index.html"><img src="img/breadin_logo.png" class="site-logo">
           </a>
         </div>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
