--- a/project4.html
+++ b/project4.html
@@ -11,7 +11,7 @@
 </head>
     <header id="header">
         <div id="logo">
-            <a href="index.html"><img src="img/breadin_logo.png"  width="15%" height="15%"></a>
+            <a href="index.html"><img src="img/breadin_logo.png" class="site-logo">
           </a>
         </div>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
@@ -23,7 +23,17 @@
           </ul>
         </nav>
       </header>
+
       <body>
+
+        <script>
+          const toggle = document.getElementById("mobile-menu");
+          const nav = document.getElementById("head-center");
+            
+          toggle.addEventListener("click", () => {
+            nav.classList.toggle("active");
+          });
+        </script>
   <!-- 뒤로 가기 -->
   <a class="back" href="works.html">&lt; back</a>
 
