--- a/works.html
+++ b/works.html
@@ -11,7 +11,7 @@
 <body>
   <header id="header">
     <div id="logo">
-      <a href="index.html"><img src="img/breadin_logo.png" alt="Hier kommst du zur Hauptseite" width="15%" height="15%"></a>
+      <a href="index.html"><img src="img/breadin_logo.png" class="site-logo">
       </a>
     </div>
     <nav id="head-center">
