--- a/cv.html
+++ b/cv.html
@@ -5,15 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV — you kim</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link rel="stylesheet" href="cv.css">
+  <link rel="stylesheet" href="cv.css"/>
   <script defer data-domain="breadin.github.io/breadin" src="https://plausible.io/js/script.js"></script>
 </head>
-<body>
  
     <header id="header">
         <div id="logo">
-             <a href="index.html"><img src="img/breadin_logo.png" alt="Hier kommst du zur Hauptseite" width="15%" height="15%"></a>
+             <a href="index.html">
+              <img src="img/breadin_logo.png" class="site-logo">
+             </a>
         </div>
+
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+
         <nav id="head-center">
             <ul>
               <li class="menu" ><a href="works.html"><span>/works/</span></a> </li>
@@ -23,12 +27,17 @@
         
             </ul>
         </nav>
- 
- 
- 
- 
-  </header>
 
+  </header>
+  <body>
+    <script>
+      const toggle = document.getElementById("mobile-menu");
+      const nav = document.getElementById("head-center");
+    
+      toggle.addEventListener("click", () => {
+        nav.classList.toggle("active");
+      });
+    </script>
   <main>
     <section class="intro">
       <pre>
