--- a/itd.html
+++ b/itd.html
@@ -41,7 +41,7 @@
 
   <!-- 프로젝트 상세 콘텐츠 -->
   <div class="project-detail">
-    <h1>Into the dream</h1>
+    <h1>Into the dream, 2022</h1>
 
     
     <div class="vimeo-wrapper">
