--- a/vlog_intro.html
+++ b/vlog_intro.html
@@ -15,6 +15,15 @@
             <a href="index.html"><img src="img/breadin_logo.png" class="site-logo">
           </a>
         </div>
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+        <div id="mobile-menu-overlay">
+          <div id="mobile-menu-close">&times;</div>
+          <ul>
+            <li><a href="works.html">/works/</a></li>
+            <li><a href="cv.html">/about(cv)/</a></li>
+            <li><a href="contact.html">/contact/</a></li>
+          </ul>
+        </div>
         <nav id="head-center">
           <ul>
             <li class="menu"><a href="works.html"><span>/works/</span></a></li>
@@ -26,12 +35,15 @@
 
       <body>
         <script>
-          const toggle = document.getElementById("mobile-menu");
-          const nav = document.getElementById("head-center");
-            
-          toggle.addEventListener("click", () => {
-            nav.classList.toggle("active");
-          });
+           const menuToggle = document.getElementById("mobile-menu");
+ const menuOverlay = document.getElementById("mobile-menu-overlay");
+ const menuClose = document.getElementById("mobile-menu-close");
+ menuToggle.addEventListener("click", () => {
+   menuOverlay.classList.add("active");
+ });
+ menuClose.addEventListener("click", () => {
+   menuOverlay.classList.remove("active");
+ });
         </script>
 
   <!-- 뒤로 가기 -->
