--- a/cv.html
+++ b/cv.html
@@ -51,12 +51,10 @@
     </script>
   <main>
     <section class="intro">
-      <pre>
-    / name /     youngin kim
-    / field /    media designer & artist
-    / based /    germany & south korea
-    / tools /    video, installation, AI, 3D
-      </pre>
+      <div class="info-row"><span class="label">/ name /</span><span class="value">youngin kim</span></div>
+      <div class="info-row"><span class="label">/ field /</span><span class="value">media designer & artist</span></div>
+      <div class="info-row"><span class="label">/ based /</span><span class="value">germany & south korea</span></div>
+      <div class="info-row"><span class="label">/ tools /</span><span class="value">video, installation, AI, 3D</span></div>
     </section>
 
     <section class="statement">
