--- a/cv.html
+++ b/cv.html
@@ -50,11 +50,12 @@
  });
     </script>
   <main>
+
     <section class="intro">
-      <div class="info-row"><span class="label">/ name /</span><span class="value">youngin kim</span></div>
-      <div class="info-row"><span class="label">/ field /</span><span class="value">media designer & artist</span></div>
-      <div class="info-row"><span class="label">/ based /</span><span class="value">germany & south korea</span></div>
-      <div class="info-row"><span class="label">/ tools /</span><span class="value">video, installation, AI, 3D</span></div>
+      <div class="info-line"><span class="label">/ name /</span> <span class="value">youngin kim</span></div>
+      <div class="info-line"><span class="label">/ field /</span> <span class="value">media designer & artist</span></div>
+      <div class="info-line"><span class="label">/ based /</span> <span class="value">germany & south korea</span></div>
+      <div class="info-line"><span class="label">/ tools /</span> <span class="value">video, installation, AI, 3D</span></div>
     </section>
 
     <section class="statement">
