--- a/project4.html
+++ b/project4.html
@@ -56,9 +56,9 @@
         This website was entirely designed and developed by myself. While I consulted tools like ChatGPT for specific technical assistance (e.g., responsive layout or animation tweaks), every visual, structural, and conceptual decision was made by me.
 
         On the homepage, there is an interactive 3D object. You can zoom in by scrolling down with the mouse wheel, and zoom out by scrolling up. Additionally, clicking and dragging allows you to rotate the object and adjust its orientation.
-       
+        A custom mobile version was also carefully designed to ensure an optimal experience across devices, including a responsive layout, touch-based interactions, and a full-screen hamburger menu.
     </p>
-
+    <img src="img/web_mobile.png" alt="Project image 2" oncontextmenu="return false;">
     
   </div>
 
